samples/_failures_safe/1761087484_4ec044_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a441d4f7.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
